--- a/src/app/pages/course/modalpurchase/modalpurchase.component.html
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.html
@@ -77,7 +77,7 @@
               <div style="margin-top: -12px;"   class="field flex align-items-center gap-2">
                 <label htmlFor="product{{detailPurchasesForms.length-1}}" class="w-6rem">Produit</label>
                 <button style="margin-top: -15px;" pButton pRipple type="button" icon="pi pi-plus"
-                pTooltip="Ajouter un produit non existant"  tooltipPosition="top"
+                pTooltip="Ajouter un produit non existant"  tooltipPosition="top" appendTo="body"
                   class="p-button-rounded p-button-success small-button p-mr-2 h-full"
                   (click)="openDialogAdd()">
                 </button>
