--- a/src/app/pages/recipe/modalrecipe/modalrecipe.component.html
+++ b/src/app/pages/recipe/modalrecipe/modalrecipe.component.html
@@ -23,7 +23,7 @@
 
       <h5 class="dialog-title">Liste des Détails de la Recette</h5>
       <button pButton label="Ajouter un ingrédient" type="button" [loading]="loading"
-        class="p-button-newline mt-2" (click)="showAddDetailDishesForm()"></button>
+        class="p-button-primary mt-2" (click)="showAddDetailDishesForm()"></button>
         <h3 *ngIf="showAddDetailsRecipe">Saisie nouvel detail de la recette </h3>
         <div  *ngIf="showAddDetailsRecipe" class="cardnew mt-5">
         <form class="p-fluid">
