--- a/src/app/pages/recipe/modalrecipe/modalrecipe.component.scss
+++ b/src/app/pages/recipe/modalrecipe/modalrecipe.component.scss
@@ -129,3 +129,10 @@
   display: block; 
   height: 12px;
 }
+
+.p-button-primary {
+  border: none;
+  width: auto;
+  margin: auto;
+  display: block;
+}
