--- a/src/app/pages/plat/newdishes/newdishes.component.html
+++ b/src/app/pages/plat/newdishes/newdishes.component.html
@@ -79,7 +79,7 @@
             <!-- Loop to display details -->
             <div *ngFor="let detail of compositionDishes,let i=index" class="info-row">
               <div class="info-cell">{{detail?.recipe?.name}}</div>
-              <div class="info-cell">{{detail?.quantity| number: '1.0-3' }} G</div>
+              <div class="info-cell">{{detail?.quantity| number: '1.0-3' }} {{ unitSelectionne.code }}</div>
               <div class="info-cell"><span appPriceFormater [priceValue]="detail.cout | number: '1.0-2'">{{detail?.cout| number: '1.0-3' }}</span>  {{ usercurrency }}</div>
               <div class="info-cell">
                 <button pButton pRipple type="button"  icon="pi pi-trash" class="p-button p-component p-button-text p-button-icon-only" (click)="confirmDeleteComposition(detail,i)"></button>
