--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -41,6 +41,8 @@ body, html {
   background-size: cover;
   background-position: center;
   border-right: #ff0000;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* Right Side (Form Section) */
