--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,11 +11,11 @@
 
     <div class="login-form-section">
       <div class="grid">
-        <div style="text-align: center;" class="row">
+        <div style="text-align: center;margin-bottom: 60px;" class="row">
           <div class="footer">
             <h1>You Cook Network</h1>
             <a href="https://you-cook.net" target="_blank">(you-cook.net)</a>
-            <p>“Tasty healthy meal, cooked and shared by anyone in the world”</p>
+            <p style="margin-top: 20px;">“Tasty healthy meal, cooked and shared by anyone in the world”</p>
           </div>
         </div>
         <div class="row">
