--- a/src/app/pages/create-product/create-product.component.html
+++ b/src/app/pages/create-product/create-product.component.html
@@ -29,9 +29,9 @@
         </div>
         <div class="col-12">
           <div class="field">
-            <label htmlFor="lostpercentage">Pourcentage de perte</label>
-            <p-inputNumber mode="decimal" [minFractionDigits]="2" name="lostpercentage" id="lostpercentage"
-              [(ngModel)]="lostpercentage" [showButtons]="true" [min]="0" [suffix]="'%'">
+            <label htmlFor="lossPercentage">Pourcentage de perte</label>
+            <p-inputNumber mode="decimal" [minFractionDigits]="2" name="lossPercentage" id="lossPercentage"
+              [(ngModel)]="lossPercentage" [showButtons]="true" [min]="0" [suffix]="'%'">
             </p-inputNumber>
 
           </div>
