--- a/src/app/pages/recipe/preparationrecipe/preparationrecipe.component.html
+++ b/src/app/pages/recipe/preparationrecipe/preparationrecipe.component.html
@@ -107,7 +107,7 @@
         </div>
       </div>
       <!--Detail cuisine-->
-      <div class="mini-head head-center">
+      <div class="mini-head head-center mt-4">
         <label for="head">Détails Cuisine</label>
       </div>
   
