update from *Seance du 24-03-2025************

--- a/src/app/pages/recipe/detailrecipe/detailrecipe.component.html
+++ b/src/app/pages/recipe/detailrecipe/detailrecipe.component.html
@@ -27,8 +27,8 @@
     <div class="info-row">
       <div class="info-cell label">Recette Secondaire</div>
       <div class="info-cell value">
-        <span [class]="recipe.baseRecipe ? 'text-green-500' : 'text-red-500'">
-          {{ recipe.baseRecipe ? 'OUI' : 'NON' }}
+        <span [class]="recipe.principaleRecipe ? 'text-green-500' : 'text-red-500'">
+          {{ recipe.principaleRecipe ? 'OUI' : 'NON' }}
         </span>
       </div>
     </div>
