--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .red {
   color: red;
 }
+
+
+.p-datatable .p-datatable-tbody > tr > td {
+  text-align: left;
+  border: 1px solid #e5e7eb;
+  border-width: 0 0 1px 0;
+  padding: 0.1rem 1rem !important;
+}
+
+.mdc-data-table__cell, .mdc-data-table__header-cell {
+  padding: 4px 16px !important;
+}
