Formulaire produit : masquer le champ pourcentage de perte

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -301,7 +301,7 @@
                           [(ngModel)]="productData.conditioning"></p-dropdown>
                       </div>
                     </div>
-                    <div class="col-12">
+                    <!-- <div class="col-12">
                       <div class="field">
                         <label htmlFor="lossPercentage">Pourcentage de perte</label>
                         <p-inputNumber mode="decimal" [minFractionDigits]="2" name="lossPercentage" id="lossPercentage"
@@ -309,7 +309,7 @@
                         </p-inputNumber>
                       </div>
             
-                    </div>
+                    </div> -->
                   </div>
             
                   <p>Description</p>
