--- a/src/app/pages/product/update-product/update-product.component.html
+++ b/src/app/pages/product/update-product/update-product.component.html
@@ -24,7 +24,7 @@
 
          
           
-          <div class="col-4">
+          <!-- <div class="col-4">
             <div class="field">
               <label htmlFor="lostpercentage">Pourcentage de perte</label>
               <p-inputNumber mode="decimal" [minFractionDigits]="2" name="lostpercentage" id="lostpercentage"
@@ -32,7 +32,7 @@
               </p-inputNumber>
             </div>
   
-          </div>
+          </div> -->
 
           <div class="col-4">
             <div class="field">
