--- a/src/app/pages/course/modalpurchase/modalpurchase.component.html
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.html
@@ -186,7 +186,7 @@
           </button>
         </div> -->
       </div>
-      <div class="ml-auto btnspart col-6 mt-3 center-button" style="text-align: center;">
+      <div class="ml-auto btnspart col-6 mt-3 center-button" style="margin-right: 560px;">
         <button pButton label="Modifier mes courses" type="submit" [loading]="loading" 
           class="p-button-orange mt-2 mb-2"
           [disabled]="!f.valid || detailPurchasesForms2.length==0"></button>
