--- a/src/app/pages/create-course/create-course.component.html
+++ b/src/app/pages/create-course/create-course.component.html
@@ -162,11 +162,12 @@
 
           </div> -->
         </div>
-        <div class="ml-auto btnspart col-6 center mt-3 center-button">
+        <div class="ml-auto btnspart col-6 center mt-3 center-button" style="margin-right: 560px;">
           <button pButton label="Enregistrer mes courses" type="submit" [loading]="loading" class="p-button-orange"
             [disabled]="!f.valid || detailPurchasesForms2.length==0"></button>
-            <button pButton type="button" (click)="confirm2($event)" label="Annuler" class="p-button-danger mt-2 mb-2"></button>
+          <button pButton type="button" (click)="confirm2($event)" label="Annuler" class="p-button-danger mt-2 mb-2"></button>
         </div>
+        
         
         
 
