--- a/src/app/pages/plat/modaldishes/modaldishes.component.html
+++ b/src/app/pages/plat/modaldishes/modaldishes.component.html
@@ -88,6 +88,7 @@
               <div class="info-cell">
                 <button pButton pRipple type="button" icon="pi pi-trash" 
                         class="p-button p-component p-button-text p-button-icon-only" 
+                        style="width: 20px; height: 20px; font-size: 12px;" 
                         (click)="confirmDeleteComposition(detail, i)">
                 </button>
               </div>
