--- a/src/app/pages/plat/modaldishes/modaldishes.component.scss
+++ b/src/app/pages/plat/modaldishes/modaldishes.component.scss
@@ -284,7 +284,7 @@ $borderRadiusValu: 8px;
 .info-row {
   display: flex;
   border-bottom: 1px solid #ddd;
-  padding: 12px 16px;
+  padding: 10px 10px;
 }
 
 .info-row:last-child {
@@ -301,5 +301,5 @@ $borderRadiusValu: 8px;
 
 .info-cell {
   flex: 1;
-  padding: 12px 16px;
+  // padding: 12px 16px;
 }
