formulaire de produit dans mes courses : cacher le champ % de perte

--- a/src/app/pages/create-product/create-product.component.html
+++ b/src/app/pages/create-product/create-product.component.html
@@ -27,7 +27,7 @@
               [(ngModel)]="conditioning"></p-dropdown>
           </div>
         </div>
-        <div class="col-12">
+        <!-- <div class="col-12">
           <div class="field">
             <label htmlFor="lossPercentage">Pourcentage de perte</label>
             <p-inputNumber mode="decimal" [minFractionDigits]="2" name="lossPercentage" id="lossPercentage"
@@ -36,7 +36,7 @@
 
           </div>
 
-        </div>
+        </div> -->
       </div>
 
       <p>Description</p>
