--- a/src/app/pages/recipe/recipe.component.html
+++ b/src/app/pages/recipe/recipe.component.html
@@ -311,14 +311,14 @@
                 [(ngModel)]="productData.conditioning"></p-dropdown>
             </div>
           </div>
-          <div class="col-6">
+          <!-- <div class="col-6">
             <div class="field">
               <label htmlFor="lostpercentage">Pourcentage de perte</label>
               <p-inputNumber mode="decimal" [minFractionDigits]="2" name="lostpercentage" id="lostpercentage"
                 [(ngModel)]="productData.lostpercentage" [showButtons]="true" [min]="0" [suffix]="'%'">
               </p-inputNumber>
             </div>
-          </div>
+          </div> -->
         </div>
 
         <!-- <p>Description</p>
