reduire les lignes de la liste des produits dans mes nouvelles courses, dans nouvelle recette

--- a/src/app/pages/course/modalpurchase/modalpurchase.component.html
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.html
@@ -229,7 +229,7 @@
                 <!-- <td>{{detail?.value | number:'1.2-2'}}/{{detail?.unit?.code}}</td> -->
                 <td>{{detail?.totalPrice}} {{ (cuuren) }}</td>
                 <td>
-                  <button pButton pRipple type="button" icon="pi pi-trash"
+                  <button pButton pRipple type="button" icon="pi pi-trash" style="width: 15px; height: 15px; font-size: 12px;"
                     class="p-button p-component p-button-text p-button-icon-only"
                     (click)="confirmDeleteDetail(detail,i)"></button>
                 </td>
