--- a/src/app/pages/create-course/create-course.component.html
+++ b/src/app/pages/create-course/create-course.component.html
@@ -209,7 +209,7 @@
                       /{{ detail?.unit?.code }}</td> -->
                   <td>{{detail?.totalPrice}} ({{curenn}})</td>
                   <td>
-                    <button pButton pRipple type="button" icon="pi pi-trash"
+                    <button pButton pRipple type="button" icon="pi pi-trash" style="width: 15px; height: 15px; font-size: 12px;"
                       class="p-button p-component p-button-text p-button-icon-only"
                       (click)="confirmDeleteDetail(detail, i)"></button>
                   </td>
