--- a/src/app/pages/recipe/recipe.component.html
+++ b/src/app/pages/recipe/recipe.component.html
@@ -215,7 +215,7 @@
                   <div class="info-cell">{{ detail.proportion }}</div>
                   <div class="info-cell">{{ detail.preparationIngredient }}</div>
                   <div class="info-cell">
-                    <button pButton pRipple type="button" icon="pi pi-trash"
+                    <button pButton pRipple type="button" icon="pi pi-trash" style="width: 15px; height: 15px; font-size: 12px;"
                       class="p-button p-component p-button-text p-button-icon-only"
                       (click)="confirmDeleteDetail(detail, i)"></button>
                   </div>
