Preparation d'une recette : mettre par défaut la quantité à 0, enlever la colonne preparation et changer la dernière colonne en Coût

--- a/src/app/pages/recipe/preparationrecipe/preparationrecipe.component.html
+++ b/src/app/pages/recipe/preparationrecipe/preparationrecipe.component.html
@@ -24,7 +24,7 @@
   
                 <div class=" poid col-2 gap-1 ">
                   <!-- <span class="ml-2 m-auto font-bold"> Kg</span> -->
-                  <p-inputNumber pTooltip="Quantité à préparer" tooltipPosition="top"class="number" mode="decimal" [minFractionDigits]="2" name="poidnet" id="poidnet" [(ngModel)]="recetteSelectione.net" (ngModelChange)="changePlat()" [showButtons]="true" [min]="0.1"  placeholder="Qté"></p-inputNumber>
+                  <p-inputNumber pTooltip="Quantité à préparer" tooltipPosition="top"class="number" mode="decimal" [minFractionDigits]="2" name="poidnet" id="poidnet" [(ngModel)]="recetteSelectione.net" (ngModelChange)="changePlat()" [showButtons]="true" [min]="0.0"  ></p-inputNumber>
                   <!-- [inputStyle]="{background: '#3b81f6',color:'#fff'}" -->
                 </div>
   
@@ -77,8 +77,8 @@
             <div class="info-header-cell">Nom Ingrédient</div>
             <div class="info-header-cell">Poid Net(KG)</div>
             <div class="info-header-cell">Poid Brut(KG)</div>
-            <div class="info-header-cell">Préparation</div>
-            <div class="info-header-cell">Préparation</div>
+            <!-- <div class="info-header-cell">Préparation</div> -->
+            <div class="info-header-cell">Coût</div>
           </div>
 
           <!-- Loop to display details -->
@@ -86,7 +86,7 @@
             <div class="info-cell">{{detail?.ingredient?.name}}</div>
             <div class="info-cell">{{detail?.net| number: '1.0-3' }} {{detail?.ingredient?.unit?.code}}</div>
             <div class="info-cell">{{detail?.brut | number: '1.0-3' }}  {{detail?.ingredient?.unit?.code}}</div>
-            <div class="info-cell">{{detail?.preparationIngredient }}</div>
+            <!-- <div class="info-cell">{{detail?.preparationIngredient }}</div> -->
             <div class="info-cell">{{detail?.cout| number: '1.0-2' }} {{ usercurrency }} </div>
             <div class="nodetail m-2 head-center" *ngIf="!recetteSelectione.name">
               <label for="">
