--- a/src/app/pages/recipe/preparationrecipe/preparationrecipe.component.scss
+++ b/src/app/pages/recipe/preparationrecipe/preparationrecipe.component.scss
@@ -28,12 +28,12 @@ $borderColor: $Noir;
   background-color: $Blanc;
 }
 
-.firstrow, .secaindrow {
-  border: 2px solid $borderColor;
-  padding: $paddindValu;
-  background-color: lighten($primaryColor, 40%);
-  border-radius: $borderRadiusValu;
-}
+// .firstrow, .secaindrow {
+//   border: 2px solid $borderColor;
+//   padding: $paddindValu;
+//   background-color: lighten($primaryColor, 40%);
+//   border-radius: $borderRadiusValu;
+// }
 
 .firstrow {
   .formpart > .colo > .grid {
@@ -104,41 +104,77 @@ $borderColor: $Noir;
   }
 }
 
+// .info-table {
+//   width: 100%;
+//   border-color: 3px solid #000000;
+//   border-collapse: collapse;
+//   background: #fff;
+//   border-radius: 8px;
+//   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+//   overflow: hidden;
+//   margin-top: 10px;
+// }
+
+// .info-header {
+//   display: flex;
+//   background-color: #f0f0f0;
+//   border-color: 3px solid #000000;
+//   // border-bottom: 1px solid #ddd;
+//   font-weight: bold;
+//   color: #555;
+//   padding: 12px 16px;
+// }
+
+// .info-header-cell {
+//   flex: 1;
+//   text-align: left;
+// }
+
+// .info-row {
+//   border-color: 3px solid #000000;
+//   display: flex;
+//   // border-bottom: 1px solid #ddd;
+//   padding: 10px 10px;
+// }
+
+// .info-row:last-child {
+//   border-color: 3px solid #000000;
+//   // border-bottom: none;
+// }
+
+// .info-cell {
+//   flex: 1;
+//   // padding: 0px 0px;
+// }
+
 .info-table {
   width: 100%;
+  border: 3px solid #000;
   border-collapse: collapse;
   background: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
   margin-top: 10px;
 }
 
-.info-header {
-  display: flex;
-  background-color: #f0f0f0;
-  border-bottom: 1px solid #ddd;
-  font-weight: bold;
-  color: #555;
-  padding: 12px 16px;
-}
-
-.info-header-cell {
-  flex: 1;
+.info-header-cell,
+.info-cell {
+  border: 3px solid #000;
+  padding: 12px;
   text-align: left;
 }
 
-.info-row {
-  display: flex;
-  border-bottom: 1px solid #ddd;
-  padding: 10px 10px;
+.nodetail {
+  text-align: center;
+  padding: 12px;
 }
 
-.info-row:last-child {
-  border-bottom: none;
+
+.firstrow,
+.secaindrow {
+  border: 2px solid black; // Contours visibles
+  padding: $paddindValu;
+  background-color: lighten($primaryColor, 40%);
+  border-radius: $borderRadiusValu;
 }
 
-.info-cell {
-  flex: 1;
-  // padding: 0px 0px;
-}
+
+
